--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,48 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/gray">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:padding="20dp"
+        android:gravity="center_horizontal">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_side"
+            android:layout_height="@dimen/button_side"
             android:text="Find \n Friends"
             android:id="@+id/find_friend_button"
-            android:onClick="findFriends"/>
+            android:onClick="findFriends"
+            android:textColor="@android:color/white"
+            android:background="@color/teal"
+            android:layout_marginRight="10dp"
+            />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_side"
+            android:layout_height="@dimen/button_side"
             android:text="Schedule \n Workout"
-            android:id="@+id/schedule_button" />
+            android:id="@+id/schedule_button"
+            android:onClick="scheduleWorkout"
+            android:textColor="@android:color/white"
+            android:background="@color/teal"
+            android:layout_marginRight="10dp"
+            />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Motivate"
-            android:id="@+id/motivate_button" />
+            android:layout_width="@dimen/button_side"
+            android:layout_height="@dimen/button_side"
+            android:text="Motivate \n Friend"
+            android:id="@+id/motivate_button"
+            android:onClick="motivate"
+            android:textColor="@android:color/white"
+            android:background="@color/teal"/>
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Notifications"
-        android:id="@+id/textView" />
-
-    <TableLayout
+        android:id="@+id/textView"
+        android:paddingLeft="20dp"/>
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:padding="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:minHeight="100dp"
+        android:background="@android:color/white"
+        android:gravity="center"
         >
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/notificationList" />
+        <TextView android:id="@+id/noNotificationMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Notifications"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            />
+    </RelativeLayout>
 
-        </TableLayout>
+
 
 </LinearLayout>
