--- a/app/src/main/res/layout/pick_friend_row.xml
+++ b/app/src/main/res/layout/pick_friend_row.xml
@@ -23,7 +23,8 @@
         android:layout_toRightOf="@id/row_profile_pic"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:text="Location"
+        android:text="Location:"
+        android:textColor="#666"
         android:textSize="12sp" />
     <TextView
         android:id="@+id/secondLine"
@@ -34,7 +35,8 @@
         android:layout_toRightOf="@id/row_profile_pic"
         android:gravity="center_vertical"
         android:text="Name"
-        android:textSize="16sp" />
+        android:textStyle="bold"
+        android:textSize="20sp" />
     <TextView
         android:id="@+id/thirdLine"
         android:layout_width="wrap_content"
@@ -43,13 +45,15 @@
         android:layout_toRightOf="@id/row_profile_pic"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:text="Activity"
+        android:text="Activity:"
+        android:textColor="#666"
         android:textSize="12sp" />
 
     <Button
         android:id="@+id/add_friend_button"
-        android:layout_width="108dp"
-        android:layout_height="wrap_content"
-        android:text="Send Request"
+        android:layout_marginTop="30dp"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:background="@drawable/request"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>
