--- a/app/src/main/res/layout/pick_friend_row.xml
+++ b/app/src/main/res/layout/pick_friend_row.xml
@@ -6,8 +6,8 @@
 
     <com.pkmmte.view.CircularImageView
         android:id="@+id/row_profile_pic"
-        android:layout_width="92dp"
-        android:layout_height="92dp"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
@@ -51,9 +51,10 @@
 
     <Button
         android:id="@+id/add_friend_button"
-        android:layout_marginTop="30dp"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:background="@drawable/request"
+        android:layout_marginTop="10dp"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:background="@color/teal"
+        android:textColor="@android:color/white"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>
