some styling, more functionality

--- a/app/src/main/res/layout/activity_schedule_workout.xml
+++ b/app/src/main/res/layout/activity_schedule_workout.xml
@@ -65,15 +65,13 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"/>
 
-
-
-
-    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="12dp"
-        android:layout_margin="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@android:color/white">
         <TextView
             android:layout_width="wrap_content"
@@ -111,8 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@id/time_label"
-             />
+            android:layout_below="@id/time_label"/>
 
         <TextView
             android:id="@+id/location_label"
@@ -126,8 +123,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/location_label"
-            />
+            android:layout_below="@id/location_label"/>
 
         <TextView
             android:paddingTop="5dp"
@@ -142,14 +138,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/activity_label"
-            />
+            android:layout_below="@id/activity_label"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="4dp"
+            android:paddingLeft="4dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:onClick="scheduleWorkout"
+            android:background="@color/teal"
+            android:textColor="@android:color/white"
             android:text="Schedule Workout"/>
     </RelativeLayout>
 </LinearLayout>
