--- a/app/src/main/res/layout/notificatinlistitem.xml
+++ b/app/src/main/res/layout/notificatinlistitem.xml
@@ -22,10 +22,21 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <com.pkmmte.view.CircularImageView
+            android:id="@+id/notification_prof_pic"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="6dip"
+            android:contentDescription="TODO"
+            android:background="@drawable/ic_launcher"/>
+
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/notification_prof_pic"
             android:textColor="@android:color/black"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
             android:gravity="center_vertical"
